# rust_chat

./: Cargo.toml
src/: api.rs  datasource.rs  handler.rs  main.rs  server.rs
static/: index.html
