[package]
name = "project4_test"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6"
actix-web = "4.9"
actix-ws = "0.3"
env_logger = "0.11"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
log = "0.4"
rand = "0.8"
tokio = { version = "1.24.2", features = ["sync", "io-util","rt", "time", "macros"] }
rusqlite = "0.30.0"
serde = { version = "1.0", features = ["derive"] }
